added media and last section

--- a/index.html
+++ b/index.html
@@ -242,37 +242,36 @@
             <h2 class="second_titel">SUBSCRIBE</h2>
             <p>Subscribe to get exclusive news & offer</p>
             <div class="subscribe__content">
-                <input type="text" name="" id="">
+                <input type="text" name="Email" id="" placeholder="Enter Your Adress Email">
                 <button class="but__dark">SUBSCRIBE</button>
             </div>
         </div>
     </section>
     <footer>
-        <div class="test">
-            <h3 class="test__title"></h3>
-            <p class="test__text"></p>
+        <div class="fon">
+            <div class="container">
+                <div class="footer__content">
+                    <div class="footer__content_items">
+                        <ul>
+                            <li>Price Item One</li>
+                            <li>Price Item Two</li>
+                            <li>Price Item Three</li>
+                        </ul>
+                        <ul>
+                            <li>Price Item One</li>
+                            <li>Price Item Two</li>
+                            <li>Price Item Three</li>
+                        </ul>
+                    </div>
+                    <div class="footer__content_img">
+                        <img src="./imges/footer.png" alt="">
+                    </div>
+                    <div class="footer__content_contacts">
+                        
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="test">
-            <h3 class="test__title"></h3>
-            <p class="test__text"></p>
-        </div>
-        <div class="test">
-            <h3 class="test__title"></h3>
-            <p class="test__text"></p>
-        </div>
-        <div class="test">
-            <h3 class="test__title"></h3>
-            <p class="test__text"></p>
-        </div>
-        <div class="test">
-            <h3 class="test__title"></h3>
-            <p class="test__text"></p>
-        </div>
-        <div class="test">
-            <h3 class="test__title"></h3>
-            <p class="test__text"></p>
-        </div>
-
     </footer>
     
 </body>
